deploy.yaml
## Preparatory steps for installation
## Creating a database and a user
## Before these steps, the DB host must be configured
##
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onlyoffice-confluence-cloud
  labels:
    app: onlyoffice-confluence-cloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: onlyoffice-confluence-cloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: onlyoffice-confluence-cloud
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - onlyoffice-confluence-cloud
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - name: onlyoffice-confluence-cloud
        image: onlyoffice/confluence-cloud:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: confluence-cloud-config
          mountPath: /usr/src/app/config.json
          subPath: config.json
      volumes:
      - name: confluence-cloud-config
        configMap:
          name: confluence-cloud-config

---
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice-confluence-cloud
spec:
  ports:
  - port: 3000
    name: http
    targetPort: 3000
  selector:
    app: onlyoffice-confluence-cloud
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlyoffice-confluence-cloud
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
  - host: onlyoffice-confluence-cloud.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: onlyoffice-confluence-cloud
            port:
              number: 3000
